# mlir-tutorial2

./: CMakeLists.txt  build.sh  rebuild.sh  setup.sh
lib/Dialect/Poly/: CMakeLists.txt  PolyDialect.cpp  PolyDialect.hpp  PolyDialect.td  PolyOps.hpp  PolyOps.td  PolyTypes.hpp  PolyTypes.td
lib/Transform/Affine/: AffineFullUnroll.cpp  AffineFullUnroll.hpp  AffineFullUnrollPatternRewrite.cpp  AffineFullUnrollPatternRewrite.hpp  CMakeLists.txt  Passes.hpp  Passes.td
lib/Transform/Arith/: CMakeLists.txt  MulToAdd.cpp  MulToAdd.hpp  Passes.hpp  Passes.td
tests/: CMakeLists.txt  code_motion.mlir  control_flow_sink.mlir  cse.mlir  ctlz.mlir  ctlz_runner.mlir  ctlz_simple.mlir  lit.cmake.cfg.py  poly_syntax.mlir
tools/: CMakeLists.txt  tutorial-opt.cpp
tools/tutorial-lsp-server/: CMakeLists.txt  tutorial-lsp-server.cpp
tools/tutorial-opt/: CMakeLists.txt  tutorial-opt.cpp
